--- a/SolidJokes/Views/Home/Index.cshtml
+++ b/SolidJokes/Views/Home/Index.cshtml
@@ -1,31 +1,33 @@
-﻿@{
-    ViewBag.Title = "Home Page";
-}
+﻿@model IEnumerable<Core.Models.Story>
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+<table class="table">
+    <tr>
+        <th></th>
+        <th>
+            @*@Html.ActionLink("Rating", "Index", new { sortOrder = "ratingDescending" })*@
+            <!-- Prefer HTML to helper -->
+            <a href="/Home/Index?sortOrder=ratingDescending" title="Sort by rating with highest first">Rating.</a>
+        </th>
+        <th></th>
+        <th>@Html.ActionLink("Date", "Index", new { sortOrder = "dateCreatedDescending" }, new { title = "Sort by date with newest first" })</th>
+        <th></th>
+    </tr>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+    @foreach (var item in Model) {
+        <tr>
+            <td>
+                <!-- If sortOrder is null ie davesjokes.co.uk then the helper handles this-->
+                @Html.ActionLink("^^^", "Vote", new { storyID = item.ID, sortOrder = Request.QueryString["sortOrder"] }, new { title = "Vote for me!" })
+            </td>
+            <td>@item.Rating</td>
+            <!-- Been getting Null and Empty in the database, so coding defensively -->
+            <td>
+                @if (!String.IsNullOrEmpty(item.Content)) { @item.Content }
+            @if (!String.IsNullOrEmpty(item.VideoURL)) { <iframe width="210" height="158" src="@item.VideoURL" frameborder="0" allowfullscreen></iframe>}
+            @if (!String.IsNullOrEmpty(item.ImageURL)) { <a href="@item.ImageURL"><img width="210" height="158" src="@item.ImageURL" title="@item.Title" /></a> }
+        </td>
+        <td></td>
+        <td>@String.Format("{0:d-MMM H:mm:ss}", item.CreatedAt)</td>
+    </tr>
+    }
+</table>
