--- a/SolidJokes/Views/Home/About.cshtml
+++ b/SolidJokes/Views/Home/About.cshtml
@@ -1,7 +1,18 @@
-﻿@{
-    ViewBag.Title = "About";
-}
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+﻿<h2>@*About*@</h2>
 
-<p>Use this area to provide additional information.</p>
+<p>I hope you found some great jokes here....</p>
+<p>If you've got any more, please email me at davemateer@gmail.com</p>
+
+<h3>Background</h3>
+<p>The whole idea of this site, is to remember jokes eg when am out for dinner</p>
+
+<ul>
+    <li>Easily displayable on a mobile phone</li>
+    <li>Show jokes by default in rank order</li>
+    <li>Can order by date to see latest ones added</li>
+    <li>Anyone can upvote a joke</li>
+    <li>An administrator can CRUD jokes</li>
+</ul>
+
+<h3>Developers</h3>
+<p>Source and presentation are on <a href="http://www.github.com/djhmateer/solidjokes">www.github.com/djhmateer/solidjokes</a></p>
