Changing db to SolidJokes

--- a/SolidJokes/Views/Shared/_Layout.cshtml
+++ b/SolidJokes/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("About", "About", "Home")</li>
 
-                    @if (User.Identity.Name == "dave2") {
+                    @if (User.Identity.Name == "davemateer@gmail.com") {
                         <li>@Html.ActionLink("Jokes", "Index", "Joke")</li>
                     }
 
