--- a/SolidJokes.Web/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/SolidJokes.Web/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model SolidJokes.Models.ExternalLoginConfirmationViewModel
+﻿@model SolidJokes.Web.Models.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
 }
