--- a/SolidJokes.Web/Views/Account/Login.cshtml
+++ b/SolidJokes.Web/Views/Account/Login.cshtml
@@ -1,5 +1,4 @@
-﻿@using SolidJokes.Models
-@model LoginViewModel
+﻿@model SolidJokes.Web.Models.LoginViewModel
 @{
     ViewBag.Title = "Log in";
 }
