--- a/SolidJokes.Web/Views/Account/Register.cshtml
+++ b/SolidJokes.Web/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model SolidJokes.Models.RegisterViewModel
+﻿@model SolidJokes.Web.Models.RegisterViewModel
 @{
     ViewBag.Title = "Register";
 }
