--- a/SolidJokes.Web/Views/Account/ResetPassword.cshtml
+++ b/SolidJokes.Web/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model SolidJokes.Models.ResetPasswordViewModel
+﻿@model SolidJokes.Web.Models.ResetPasswordViewModel
 @{
     ViewBag.Title = "Reset password";
 }
