--- a/SolidJokes.Web/Views/Account/VerifyCode.cshtml
+++ b/SolidJokes.Web/Views/Account/VerifyCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model SolidJokes.Models.VerifyCodeViewModel
+﻿@model SolidJokes.Web.Models.VerifyCodeViewModel
 @{
     ViewBag.Title = "Verify";
 }
