--- a/SolidJokes.Web/Views/Manage/AddPhoneNumber.cshtml
+++ b/SolidJokes.Web/Views/Manage/AddPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model SolidJokes.Models.AddPhoneNumberViewModel
+﻿@model SolidJokes.Web.Models.AddPhoneNumberViewModel
 @{
     ViewBag.Title = "Phone Number";
 }
