--- a/SolidJokes.Web/Views/Manage/ChangePassword.cshtml
+++ b/SolidJokes.Web/Views/Manage/ChangePassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model SolidJokes.Models.ChangePasswordViewModel
+﻿@model SolidJokes.Web.Models.ChangePasswordViewModel
 @{
     ViewBag.Title = "Change Password";
 }
