--- a/SolidJokes.Web/Views/Manage/ManageLogins.cshtml
+++ b/SolidJokes.Web/Views/Manage/ManageLogins.cshtml
@@ -1,4 +1,4 @@
-﻿@model SolidJokes.Models.ManageLoginsViewModel
+﻿@model SolidJokes.Web.Models.ManageLoginsViewModel
 @using Microsoft.Owin.Security
 @{
     ViewBag.Title = "Manage your external logins";
