--- a/SolidJokes.Web/Views/Manage/SetPassword.cshtml
+++ b/SolidJokes.Web/Views/Manage/SetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model SolidJokes.Models.SetPasswordViewModel
+﻿@model SolidJokes.Web.Models.SetPasswordViewModel
 @{
     ViewBag.Title = "Create Password";
 }
