--- a/SolidJokes.Web/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/SolidJokes.Web/Views/Manage/VerifyPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model SolidJokes.Models.VerifyPhoneNumberViewModel
+﻿@model SolidJokes.Web.Models.VerifyPhoneNumberViewModel
 @{
     ViewBag.Title = "Verify Phone Number";
 }
