--- a/SolidJokes.Web/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/SolidJokes.Web/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model SolidJokes.Models.ExternalLoginListViewModel
+﻿@model SolidJokes.Web.Models.ExternalLoginListViewModel
 @using Microsoft.Owin.Security
 
 <h4>Use another service to log in.</h4>
