Changing more namespaces

--- a/SolidJokes.Web/Views/Home/Index.cshtml
+++ b/SolidJokes.Web/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Core.Models.Joke>
+﻿@model IEnumerable<SolidJokes.Core.Models.Joke>
 
 <!-- Green Message -->
 @if (ViewBag.GreenMessage == true) {
