--- a/SolidJokes.Web/Views/Home/Index.cshtml
+++ b/SolidJokes.Web/Views/Home/Index.cshtml
@@ -31,7 +31,7 @@
             <!-- Been getting Null and Empty in the database, so coding defensively -->
             <td>
                 @if (!String.IsNullOrEmpty(item.Content)) { @item.Content }
-                @if (!String.IsNullOrEmpty(item.VideoURL)) { <iframe width="210" height="158" src="@item.VideoURL" frameborder="0" allowfullscreen></iframe>}
+@*                @if (!String.IsNullOrEmpty(item.VideoURL)) { <iframe width="210" height="158" src="@item.VideoURL" frameborder="0" allowfullscreen></iframe>}*@
                 @if (!String.IsNullOrEmpty(item.ImageURL)) { <a href="@item.ImageURL"><img width="210" height="158" src="@item.ImageURL" title="@item.Title" /></a> }
             </td>
             <td></td>
