Can edit a Joke and has some validations from DataAnnotations on it that javascript picks up

--- a/SolidJokes.Web/Views/Joke/Edit.cshtml
+++ b/SolidJokes.Web/Views/Joke/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model SolidJokes.Core.Models.Joke
+﻿@model SolidJokes.Core.Models.JokeApplication
 
 @{
     ViewBag.Title = "Edit";
@@ -15,7 +15,7 @@
         <h4>Joke</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.ID)
+        @Html.HiddenFor(model => model.JokeID)
 
         <div class="form-group">
             @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-md-2" })
