--- a/SolidJokes.Web/Views/Joke/Index.cshtml
+++ b/SolidJokes.Web/Views/Joke/Index.cshtml
@@ -53,9 +53,9 @@
             @Html.DisplayFor(modelItem => item.CreatedAt)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ID }) @*|*@
+            @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
             @*@Html.ActionLink("Details", "Details", new { id=item.ID }) |*@
-            @*@Html.ActionLink("Delete", "Delete", new { id=item.ID })*@
+            @Html.ActionLink("Delete", "Delete", new { id=item.ID })
         </td>
     </tr>
 }
