Spiking out some Spotify stuff, and sideloading on this website.

--- a/SolidJokes.Web/Views/Home/About.cshtml
+++ b/SolidJokes.Web/Views/Home/About.cshtml
@@ -16,3 +16,4 @@
 
 <h3>Developers</h3>
 <p>Source and presentation are on <a href="http://www.github.com/djhmateer/solidjokes">www.github.com/djhmateer/solidjokes</a></p>
+<a href="~/Home/Spotify">.</a>
