--- a/SolidJokes.Web/Views/Home/About.cshtml
+++ b/SolidJokes.Web/Views/Home/About.cshtml
@@ -16,4 +16,5 @@
 
 <h3>Developers</h3>
 <p>Source and presentation are on <a href="http://www.github.com/djhmateer/solidjokes">www.github.com/djhmateer/solidjokes</a></p>
-<a href="~/Home/Spotify">.</a>
+<p><a href="~/Home/Spotify">.</a></p>
+<p><a href="~/Home/SpotifyArtistSearch">..</a></p>
