--- a/SolidJokes.Web/Views/Home/SpotifyArtistSearch.cshtml
+++ b/SolidJokes.Web/Views/Home/SpotifyArtistSearch.cshtml
@@ -12,6 +12,7 @@ else {
     <input type=hidden name=offset value=0>
     <input type="submit" value="Search" />
 </form>
+<a href="/Artist/Details/Random">Random Artist!</a>
 
 @if (Model != null) {
     <p>
