--- a/SolidJokes.Web/Views/Artist/Details.cshtml
+++ b/SolidJokes.Web/Views/Artist/Details.cshtml
@@ -1,23 +1,35 @@
-﻿@model SolidJokes.Web.Controllers.ArtistDetails
+﻿@model SolidJokes.Web.Controllers.ArtistDetailsViewModel
 
 @{
     ViewBag.Title = "Details";
 }
 
-<h2>@Model.Name</h2>
+<h2>@Model.ArtistDetails.Name</h2>
 <p>
     @if (@ViewBag.Id == "Random") {
         <a href="/Artist/Details/Random">Another Random Artist!</a>
     }
 </p>
-<p>API time: @ViewBag.APITime ms</p>
-<p>API Call: @Model.Href</p>
+<br/>
+@foreach (var item in Model.APIDebugList){
+    <p>@item.APITime : @item.APIURL</p>
+}
+    
+<p><a href="@Model.ArtistDetails.external_urls.Spotify">Open web</a> | <a href="@Model.ArtistDetails.Uri">Open direct</a></p>
+<p>Followers Total: @Model.ArtistDetails.followers.Total | Popularity: @Model.ArtistDetails.Popularity</p>
 
-<p><a href="@Model.external_urls.Spotify">Open web</a> </p>
-<p><a href="@Model.Uri">Open direct</a></p>
-<p>Followers Total: @Model.followers.Total</p>
-<p>Popularity: @Model.Popularity</p>
+Top Tracks
+<table class="table">
+    @foreach (var item in Model.ArtistTopTracks.tracks) {
+        <tr>
+            <td>
+                @item.name
+            </td>
+            <td>@item.popularity</td>
+        </tr>
+    }
+</table>
 
-@if (@Model.Images.Count > 0) {
-    <img src="@Model.Images[0].URL" />
+@if (@Model.ArtistDetails.Images.Count > 0) {
+    <img src="@Model.ArtistDetails.Images[0].URL" />
 }
