--- a/SolidJokes.Web/Views/Artist/Details.cshtml
+++ b/SolidJokes.Web/Views/Artist/Details.cshtml
@@ -1,31 +1,31 @@
 ﻿@model SolidJokes.Web.Controllers.ArtistDetailsViewModel
 
-@{
-    ViewBag.Title = "Details";
-}
-
 <h2>@Model.ArtistDetails.Name</h2>
-<p>
-    @if (@ViewBag.Id == "Random") {
-        <a href="/Artist/Details/Random">Another Random Artist!</a>
-    }
-</p>
-<br/>
-@foreach (var item in Model.APIDebugList){
+<a href="/Home/SpotifyArtistSearch">Search</a>
+@foreach (var item in Model.APIDebugList) {
     <p>@item.APITime : @item.APIURL</p>
 }
-    
+
 <p><a href="@Model.ArtistDetails.external_urls.Spotify">Open web</a> | <a href="@Model.ArtistDetails.Uri">Open direct</a></p>
 <p>Followers Total: @Model.ArtistDetails.followers.Total | Popularity: @Model.ArtistDetails.Popularity</p>
 
 Top Tracks
+<br />
+
 <table class="table">
     @foreach (var item in Model.ArtistTopTracks.tracks) {
         <tr>
+            <td>@item.name</td>
             <td>
-                @item.name
+                <audio controls="controls">
+                    <source src="@item.preview_url" type="audio/mpeg">
+                    <p>Ooops - please use a more up to date browser so you can preview songs</p>
+                </audio>
             </td>
+            <td><a href="@item.uri">Direct</a> | <a href="@item.href">Web</a></td>
             <td>@item.popularity</td>
+            <td>@item.album.name</td>
+            <td><img src="@item.album.images[2].url" /> </td>
         </tr>
     }
 </table>
