--- a/SolidJokes.Web/Views/Artist/Details.cshtml
+++ b/SolidJokes.Web/Views/Artist/Details.cshtml
@@ -9,9 +9,7 @@
 <p><a href="@Model.ArtistDetails.external_urls.Spotify">Open web</a> | <a href="@Model.ArtistDetails.Uri">Open direct</a></p>
 <p>Followers Total: @Model.ArtistDetails.followers.Total | Popularity: @Model.ArtistDetails.Popularity</p>
 
-Top Tracks
-<br />
-
+<h3>Top Tracks</h3>
 <table class="table">
     @foreach (var item in Model.ArtistTopTracks.tracks) {
         <tr>
@@ -25,10 +23,23 @@ Top Tracks
             <td><a href="@item.uri">Direct</a> | <a href="@item.href">Web</a></td>
             <td>@item.popularity</td>
             <td>@item.album.name</td>
-            <td><img src="@item.album.images[2].url" /> </td>
+            <td><a href="/Album/Details/@item.album.id"> <img src="@item.album.images[2].url" /> </a></td>
         </tr>
     }
 </table>
+
+
+<h3>Albums</h3>
+<table class="table">
+    @foreach (var item in Model.ArtistAlbums.items) {
+        <tr>
+            <td>@item.name</td>
+            <td><a href="@item.uri">Direct</a> | @item.album_type</td>
+            <td><a href="/Album/Details/@item.id"> <img src="@item.images[2].url" /></a> </td>
+        </tr>
+    }
+</table>
+
 
 @if (@Model.ArtistDetails.Images.Count > 0) {
     <img src="@Model.ArtistDetails.Images[0].URL" />
