--- a/SolidJokes.Web/Views/Home/Spotify.cshtml
+++ b/SolidJokes.Web/Views/Home/Spotify.cshtml
@@ -1,6 +1,12 @@
 ﻿
 <p>Test Page for Spotify</p>
 
+<p>Make a playlist - authenticate first</p>
+<a href="/Home/SpotifyAuthenticate">Go</a>
+<br />
+<br />
+
+
 <p>Play Track - Johnny B Goode</p>
 <iframe src="https://embed.spotify.com/?uri=spotify:track:0mDHS1Q7HGtpgjYAyG2Svn" width="300" height="80" frameborder="0" allowtransparency="true"></iframe>
 
