--- a/SolidJokes.Web/Views/Home/SpotifyCallback.cshtml
+++ b/SolidJokes.Web/Views/Home/SpotifyCallback.cshtml
@@ -1,7 +1,23 @@
-﻿
-@{
-    ViewBag.Title = "SpotifyCallback";
+﻿@using System.Web.UI.WebControls
+@model SolidJokes.Web.Controllers.MeResponse
+
+<h2>Me</h2>
+@if (Model != null){
+    <p>Name: @Model.display_name</p>
+    <p>Email: @Model.email</p>
+    <p>Country: @Model.country</p>
+    <p>External urls spotify: @Model.external_urls.spotify</p>
+    <p>Followers href: @Model.followers.href</p>
+    <p>Followers total: @Model.followers.total</p>
+    <p>Href: @Model.href</p>
+    <p>Id: @Model.id</p>
+    if (Model.images.Count > 0) {
+        foreach (var image in Model.images) {
+            <p>Image: @image</p>
+        }
+    }
+
+    <p>Product: @Model.product</p>
+    <p>Type: @Model.type</p>
+    <p>Uri: @Model.uri</p>
 }
-
-<h2>SpotifyCallback</h2>
-
