north europe hosting

--- a/SolidJokes.Web/Views/Shared/_Layout.cshtml
+++ b/SolidJokes.Web/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Dave's Jokes</p>
+            <p>&copy; @DateTime.Now.Year - Dave's Jokes (North Europa Hosting)</p>
         </footer>
     </div>
 
