--- a/SolidJokes.Web/Views/Home/Index.cshtml
+++ b/SolidJokes.Web/Views/Home/Index.cshtml
@@ -10,6 +10,7 @@
     <div class="alert-danger" align="center">@ViewBag.Message</div>
 }
 
+Compile date: @ViewBag.DateOfCompile
 <table class="table">
     <tr>
         <th></th>
