compile time in about

--- a/SolidJokes.Web/Views/Home/About.cshtml
+++ b/SolidJokes.Web/Views/Home/About.cshtml
@@ -15,4 +15,8 @@
 </ul>
 
 <h3>Developers</h3>
-<p>Source and presentation are on <a href="http://www.github.com/djhmateer/solidjokes">www.github.com/djhmateer/solidjokes</a></p>
+<p>Source and presentation are on <a href="http://www.github.com/djhmateer/solidjokes">www.github.com/djhmateer/solidjokes</a>
+</p>
+
+<h3>Compile Time</h3>
+<p>@ViewBag.DateOfCompile</p>
