--- a/SolidJokes.Web/Views/Shared/_Layout.cshtml
+++ b/SolidJokes.Web/Views/Shared/_Layout.cshtml
@@ -35,13 +35,22 @@
             </div>
         </div>
     </div>
-<div class="container body-content">
-    @RenderBody()
-</div>
-<br/>
+    <div class="container body-content">
+        @RenderBody()
+    </div>
+    <br />
     <div id="footer">
         <div class="container text-center">
-            <p class="text-muted credit">&copy; @DateTime.Now.Year Dave's Jokes. Version: @Assembly.GetExecutingAssembly().GetLinkerTime() (UK Time)</p>
+            <p class="text-muted credit">&copy; @DateTime.Now.Year Daves Top Jokes (North Europe) Rev: @Assembly.GetExecutingAssembly().GetLinkerTime() (UK Time)</p>
+            <p class="text-muted credit">
+                Other projects of mine: <a href="http://www.davestopmusic.co.uk">davestopmusic.com</a>
+                <a href="http://refactoring.azurewebsites.net">refactoring.azurewebsites.net</a>
+                <a href="http://dmovies.azurewebsites.net">dmovies.azurewebsites.net</a>
+            <p class="text-muted credit">
+                <img src="~/Content/Images/Twitter_logo_blue.png" width="20" height="20" /><a href="https://twitter.com/dave_mateer"> https://twitter.com/dave_mateer</a>
+                <img src="~/Content/Images/Octocat.png" width="20" height="20" /> <a href="https://github.com/djhmateer"> https://github.com/djhmateer</a>
+                <img src="~/Content/Images/mail-icon-128.png" width="20" height="20" /> davemateer@gmail.com
+            </p>
         </div>
     </div>
 
