--- a/SolidJokes.Web/Views/Shared/_Layout.cshtml
+++ b/SolidJokes.Web/Views/Shared/_Layout.cshtml
@@ -42,10 +42,11 @@
     <div id="footer">
         <div class="container text-center">
             <p class="text-muted credit">&copy; @DateTime.Now.Year Daves Top Jokes (North Europe) Rev: @Assembly.GetExecutingAssembly().GetLinkerTime() (UK Time)</p>
-            <p class="text-muted credit">
-                Other projects of mine: <a href="http://www.davestopmusic.co.uk">davestopmusic.com</a>
-                <a href="http://refactoring.azurewebsites.net">refactoring.azurewebsites.net</a>
+            <p class="text-muted credit">Other projects of mine:
+                <a href="http://www.davestopmusic.com">davestopmusic.com</a>
                 <a href="http://dmovies.azurewebsites.net">dmovies.azurewebsites.net</a>
+                <a href="http://refactoring.azurewebsites.net">refactoring.azurewebsites.net</a>
+            </p>
             <p class="text-muted credit">
                 <img src="~/Content/Images/Twitter_logo_blue.png" width="20" height="20" /><a href="https://twitter.com/dave_mateer"> https://twitter.com/dave_mateer</a>
                 <img src="~/Content/Images/Octocat.png" width="20" height="20" /> <a href="https://github.com/djhmateer"> https://github.com/djhmateer</a>
